codegen/parser.output
Grammar

    0 $accept: program $end

    1 program: decl_list TOKEN_END
    2        | TOKEN_END

    3 decl_list: decl_list decl
    4          | decl

    5 decl: ident TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC TOKEN_SEMI
    7     | ident TOKEN_COLON type TOKEN_SEMI
    8     | ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC stmt_list TOKEN_RBRAC
    9     | ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC

   10 type: TOKEN_KEYWORD_STRING
   11     | TOKEN_KEYWORD_INTEGER
   12     | TOKEN_KEYWORD_CHAR
   13     | TOKEN_KEYWORD_BOOLEAN
   14     | TOKEN_KEYWORD_VOID
   15     | TOKEN_KEYWORD_ARRAY TOKEN_LSQBRAC expr_opt TOKEN_RSQBRAC type
   16     | TOKEN_KEYWORD_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN

   17 ident: TOKEN_ID

   18 param_list: /* empty */
   19           | not_empty_param_list

   20 not_empty_param_list: not_empty_param_list TOKEN_COMA param
   21                     | param

   22 param: ident TOKEN_COLON type

   23 stmt_list: stmt_list stmt
   24          | stmt

   25 stmt: stmt_matched
   26     | stmt_unmatched

   27 stmt_matched: decl
   28             | expr TOKEN_SEMI
   29             | TOKEN_KEYWORD_PRINT expr_list TOKEN_SEMI
   30             | TOKEN_KEYWORD_RETURN expr TOKEN_SEMI
   31             | TOKEN_KEYWORD_RETURN TOKEN_SEMI
   32             | TOKEN_KEYWORD_FOR TOKEN_LPAREN expr_opt TOKEN_SEMI expr_opt TOKEN_SEMI expr_opt TOKEN_RPAREN stmt_matched
   33             | TOKEN_LBRAC stmt_list TOKEN_RBRAC
   34             | TOKEN_LBRAC TOKEN_RBRAC
   35             | TOKEN_KEYWORD_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_matched TOKEN_KEYWORD_ELSE stmt_matched

   36 stmt_unmatched: TOKEN_KEYWORD_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
   37               | TOKEN_KEYWORD_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_matched TOKEN_KEYWORD_ELSE stmt_unmatched

   38 expr_opt: /* empty */
   39         | expr

   40 expr: expr TOKEN_ASSIGN term_nnnn
   41     | term_nnnn

   42 term_nnnn: term_nnnn TOKEN_OR term_nnn
   43          | term_nnn

   44 term_nnn: term_nnn TOKEN_AND term_nn
   45         | term_nn

   46 term_nn: term_nn TOKEN_EQ term_n
   47        | term_nn TOKEN_NEQ term_n
   48        | term_nn TOKEN_LT term_n
   49        | term_nn TOKEN_GT term_n
   50        | term_nn TOKEN_LE term_n
   51        | term_nn TOKEN_GE term_n
   52        | term_n

   53 term_n: term_n TOKEN_ADD term
   54       | term_n TOKEN_SUBTRACT term
   55       | term

   56 term: term TOKEN_MULTIPLY factor_nn
   57     | term TOKEN_DIVIDE factor_nn
   58     | term TOKEN_MODULO factor_nn
   59     | factor_nn

   60 factor_nn: factor_nn TOKEN_EXPO factor_n
   61          | factor_n

   62 factor_n: TOKEN_NOT factor_n
   63         | TOKEN_SUBTRACT factor_n
   64         | factor

   65 factor: item TOKEN_POST_INCREASE
   66       | item TOKEN_POST_DECREASE
   67       | item

   68 item: TOKEN_LPAREN expr TOKEN_RPAREN
   69     | TOKEN_INTEGER
   70     | TOKEN_KEYWORD_TRUE
   71     | TOKEN_KEYWORD_FALSE
   72     | ident
   73     | TOKEN_STRING
   74     | TOKEN_CHAR
   75     | TOKEN_LBRAC expr_list_non_empty TOKEN_RBRAC
   76     | ident TOKEN_LPAREN expr_list TOKEN_RPAREN
   77     | item TOKEN_LSQBRAC expr TOKEN_RSQBRAC

   78 expr_list: expr_list_non_empty
   79          | /* empty */

   80 expr_list_non_empty: expr_list_non_empty TOKEN_COMA expr
   81                    | expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ID (258) 17
TOKEN_INTEGER (259) 69
TOKEN_CHAR (260) 74
TOKEN_STRING (261) 73
TOKEN_ADD (262) 53
TOKEN_SUBTRACT (263) 54 63
TOKEN_MULTIPLY (264) 56
TOKEN_DIVIDE (265) 57
TOKEN_ASSIGN (266) 5 6 8 9 40
TOKEN_MODULO (267) 58
TOKEN_EXPO (268) 60
TOKEN_POST_INCREASE (269) 65
TOKEN_POST_DECREASE (270) 66
TOKEN_NOT (271) 62
TOKEN_LT (272) 48
TOKEN_GT (273) 49
TOKEN_LE (274) 50
TOKEN_GE (275) 51
TOKEN_EQ (276) 46
TOKEN_NEQ (277) 47
TOKEN_AND (278) 44
TOKEN_OR (279) 42
TOKEN_LPAREN (280) 16 32 35 36 37 68 76
TOKEN_RPAREN (281) 16 32 35 36 37 68 76
TOKEN_LSQBRAC (282) 15 77
TOKEN_RSQBRAC (283) 15 77
TOKEN_LBRAC (284) 6 8 9 33 34 75
TOKEN_RBRAC (285) 6 8 9 33 34 75
TOKEN_COLON (286) 5 6 7 8 9 22
TOKEN_COMA (287) 20 80
TOKEN_SEMI (288) 5 6 7 28 29 30 31 32
TOKEN_KEYWORD_INTEGER (289) 11
TOKEN_KEYWORD_BOOLEAN (290) 13
TOKEN_KEYWORD_CHAR (291) 12
TOKEN_KEYWORD_STRING (292) 10
TOKEN_KEYWORD_ARRAY (293) 15
TOKEN_KEYWORD_TRUE (294) 70
TOKEN_KEYWORD_FALSE (295) 71
TOKEN_KEYWORD_VOID (296) 14
TOKEN_KEYWORD_FUNCTION (297) 16
TOKEN_KEYWORD_IF (298) 35 36 37
TOKEN_KEYWORD_ELSE (299) 35 37
TOKEN_KEYWORD_FOR (300) 32
TOKEN_KEYWORD_PRINT (301) 29
TOKEN_KEYWORD_RETURN (302) 30 31
TOKEN_END (303) 1 2


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
decl_list (51)
    on left: 3 4, on right: 1 3
decl (52)
    on left: 5 6 7 8 9, on right: 3 4 27
type (53)
    on left: 10 11 12 13 14 15 16, on right: 5 6 7 8 9 15 16 22
ident (54)
    on left: 17, on right: 5 6 7 8 9 22 72 76
param_list (55)
    on left: 18 19, on right: 16
not_empty_param_list (56)
    on left: 20 21, on right: 19 20
param (57)
    on left: 22, on right: 20 21
stmt_list (58)
    on left: 23 24, on right: 8 23 33
stmt (59)
    on left: 25 26, on right: 23 24 36
stmt_matched (60)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 32 35 37
stmt_unmatched (61)
    on left: 36 37, on right: 26 37
expr_opt (62)
    on left: 38 39, on right: 15 32
expr (63)
    on left: 40 41, on right: 5 28 30 35 36 37 39 40 68 77 80 81
term_nnnn (64)
    on left: 42 43, on right: 40 41 42
term_nnn (65)
    on left: 44 45, on right: 42 43 44
term_nn (66)
    on left: 46 47 48 49 50 51 52, on right: 44 45 46 47 48 49 50 51
term_n (67)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 53 54
term (68)
    on left: 56 57 58 59, on right: 53 54 55 56 57 58
factor_nn (69)
    on left: 60 61, on right: 56 57 58 59 60
factor_n (70)
    on left: 62 63 64, on right: 60 61 62 63
factor (71)
    on left: 65 66 67, on right: 64
item (72)
    on left: 68 69 70 71 72 73 74 75 76 77, on right: 65 66 67 77
expr_list (73)
    on left: 78 79, on right: 29 76
expr_list_non_empty (74)
    on left: 80 81, on right: 75 78 80


state 0

    0 $accept: . program $end

    TOKEN_ID   shift, and go to state 1
    TOKEN_END  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    ident      go to state 6


state 1

   17 ident: TOKEN_ID .

    $default  reduce using rule 17 (ident)


state 2

    2 program: TOKEN_END .

    $default  reduce using rule 2 (program)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: decl_list . TOKEN_END
    3 decl_list: decl_list . decl

    TOKEN_ID   shift, and go to state 1
    TOKEN_END  shift, and go to state 8

    decl   go to state 9
    ident  go to state 6


state 5

    4 decl_list: decl .

    $default  reduce using rule 4 (decl_list)


state 6

    5 decl: ident . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC TOKEN_SEMI
    7     | ident . TOKEN_COLON type TOKEN_SEMI
    8     | ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC stmt_list TOKEN_RBRAC
    9     | ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC

    TOKEN_COLON  shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    1 program: decl_list TOKEN_END .

    $default  reduce using rule 1 (program)


state 9

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


state 10

    5 decl: ident TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC TOKEN_SEMI
    7     | ident TOKEN_COLON . type TOKEN_SEMI
    8     | ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_LBRAC stmt_list TOKEN_RBRAC
    9     | ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC

    TOKEN_KEYWORD_INTEGER   shift, and go to state 11
    TOKEN_KEYWORD_BOOLEAN   shift, and go to state 12
    TOKEN_KEYWORD_CHAR      shift, and go to state 13
    TOKEN_KEYWORD_STRING    shift, and go to state 14
    TOKEN_KEYWORD_ARRAY     shift, and go to state 15
    TOKEN_KEYWORD_VOID      shift, and go to state 16
    TOKEN_KEYWORD_FUNCTION  shift, and go to state 17

    type  go to state 18


state 11

   11 type: TOKEN_KEYWORD_INTEGER .

    $default  reduce using rule 11 (type)


state 12

   13 type: TOKEN_KEYWORD_BOOLEAN .

    $default  reduce using rule 13 (type)


state 13

   12 type: TOKEN_KEYWORD_CHAR .

    $default  reduce using rule 12 (type)


state 14

   10 type: TOKEN_KEYWORD_STRING .

    $default  reduce using rule 10 (type)


state 15

   15 type: TOKEN_KEYWORD_ARRAY . TOKEN_LSQBRAC expr_opt TOKEN_RSQBRAC type

    TOKEN_LSQBRAC  shift, and go to state 19


state 16

   14 type: TOKEN_KEYWORD_VOID .

    $default  reduce using rule 14 (type)


state 17

   16 type: TOKEN_KEYWORD_FUNCTION . type TOKEN_LPAREN param_list TOKEN_RPAREN

    TOKEN_KEYWORD_INTEGER   shift, and go to state 11
    TOKEN_KEYWORD_BOOLEAN   shift, and go to state 12
    TOKEN_KEYWORD_CHAR      shift, and go to state 13
    TOKEN_KEYWORD_STRING    shift, and go to state 14
    TOKEN_KEYWORD_ARRAY     shift, and go to state 15
    TOKEN_KEYWORD_VOID      shift, and go to state 16
    TOKEN_KEYWORD_FUNCTION  shift, and go to state 17

    type  go to state 20


state 18

    5 decl: ident TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SEMI
    6     | ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC TOKEN_SEMI
    7     | ident TOKEN_COLON type . TOKEN_SEMI
    8     | ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_LBRAC stmt_list TOKEN_RBRAC
    9     | ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_LBRAC TOKEN_RBRAC

    TOKEN_ASSIGN  shift, and go to state 21
    TOKEN_SEMI    shift, and go to state 22


state 19

   15 type: TOKEN_KEYWORD_ARRAY TOKEN_LSQBRAC . expr_opt TOKEN_RSQBRAC type

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 29
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31

    $default  reduce using rule 38 (expr_opt)

    ident      go to state 32
    expr_opt   go to state 33
    expr       go to state 34
    term_nnnn  go to state 35
    term_nnn   go to state 36
    term_nn    go to state 37
    term_n     go to state 38
    term       go to state 39
    factor_nn  go to state 40
    factor_n   go to state 41
    factor     go to state 42
    item       go to state 43


state 20

   16 type: TOKEN_KEYWORD_FUNCTION type . TOKEN_LPAREN param_list TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 44


state 21

    5 decl: ident TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SEMI
    6     | ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_LBRAC TOKEN_RBRAC TOKEN_SEMI
    8     | ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_LBRAC stmt_list TOKEN_RBRAC
    9     | ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_LBRAC TOKEN_RBRAC

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 45
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31

    ident      go to state 32
    expr       go to state 46
    term_nnnn  go to state 35
    term_nnn   go to state 36
    term_nn    go to state 37
    term_n     go to state 38
    term       go to state 39
    factor_nn  go to state 40
    factor_n   go to state 41
    factor     go to state 42
    item       go to state 43


state 22

    7 decl: ident TOKEN_COLON type TOKEN_SEMI .

    $default  reduce using rule 7 (decl)


state 23

   69 item: TOKEN_INTEGER .

    $default  reduce using rule 69 (item)


state 24

   74 item: TOKEN_CHAR .

    $default  reduce using rule 74 (item)


state 25

   73 item: TOKEN_STRING .

    $default  reduce using rule 73 (item)


state 26

   63 factor_n: TOKEN_SUBTRACT . factor_n

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 29
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31

    ident     go to state 32
    factor_n  go to state 47
    factor    go to state 42
    item      go to state 43


state 27

   62 factor_n: TOKEN_NOT . factor_n

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 29
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31

    ident     go to state 32
    factor_n  go to state 48
    factor    go to state 42
    item      go to state 43


state 28

   68 item: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 29
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31

    ident      go to state 32
    expr       go to state 49
    term_nnnn  go to state 35
    term_nnn   go to state 36
    term_nn    go to state 37
    term_n     go to state 38
    term       go to state 39
    factor_nn  go to state 40
    factor_n   go to state 41
    factor     go to state 42
    item       go to state 43


state 29

   75 item: TOKEN_LBRAC . expr_list_non_empty TOKEN_RBRAC

    TOKEN_ID             shift, and go to state 1
    TOKEN_INTEGER        shift, and go to state 23
    TOKEN_CHAR           shift, and go to state 24
    TOKEN_STRING         shift, and go to state 25
    TOKEN_SUBTRACT       shift, and go to state 26
    TOKEN_NOT            shift, and go to state 27
    TOKEN_LPAREN         shift, and go to state 28
    TOKEN_LBRAC          shift, and go to state 29
    TOKEN_KEYWORD_TRUE   shift, and go to state 30
    TOKEN_KEYWORD_FALSE  shift, and go to state 31
